# University

./: .gitarrtibutes  .gitattributes  .gitattributes  README.md
1st Year/1st Semester/Computer Labs I/: README.md
1st Year/1st Semester/Computer Labs I/Project/Projeto/2022li1g093/: 2022li1g093.cabal  README.md
1st Year/1st Semester/Computer Labs I/Project/Projeto/2022li1g093/doc/html/: HighScore.html  SalvaJogo.html  Tarefa1_2022li1g093.html  Tarefa2_2022li1g093.html  Tarefa3_2022li1g093.html  Tarefa4_2022li1g093.html  Tarefa5_2022li1g093.html  Tarefa6_2022li1g093.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-V.html  doc-index-W.html  doc-index.html  index.html
1st Year/1st Semester/Computer Labs I/Project/Projeto/2022li1g093/src/: Fase1.hs  HighScore.hs  Main.hs  SalvaJogo.hs  Tarefa1_2022li1g093.hs  Tarefa2_2022li1g093.hs  Tarefa3_2022li1g093.hs  Tarefa4_2022li1g093.hs  Tarefa5_2022li1g093.hs  Tarefa6_2022li1g093.hs
1st Year/1st Semester/Computer Labs I/Project/Projeto/2022li1g093/src/data/: saveGame.txt
1st Year/1st Semester/Computer Labs I/Project/Projeto/2022li1g093/tests/: Spec.hs  Tarefa1_2022li1g093_Spec.hs  Tarefa2_2022li1g093_Spec.hs  Tarefa3_2022li1g093_Spec.hs  Tarefa4_2022li1g093_Spec.hs  TestsLibrary.hs
1st Year/1st Semester/Functional Programming/: README.md
1st Year/2nd Semester/Algorithmic Labs I/: README.md
1st Year/2nd Semester/Imperative Programming/: README.md
2nd Year/1st Semester/Communication Systems and Networks/: README.md
2nd Year/1st Semester/Computer Labs III/: README.md
2nd Year/1st Semester/Computer Labs III/Project/grupo68/guiao-3/: CMakeLists.txt  Makefile  README.md  command1_output.txt  verifica-estrutura.sh
2nd Year/1st Semester/Computer Labs III/Project/grupo68/guiao-3/src/: catalogo-commits.c  catalogo-commits.h  catalogo-repos.c  catalogo-repos.h  catalogo-users.c  catalogo-users.h  catalogo.c  catalogo.h  constructors.c  constructors.h  interpretador.c  interpretador.h  main.c  main.h  queries.c  queries.h  tests.c  tests.h
2nd Year/2nd Semester/Object Oriented Programming/: README.md
2nd Year/2nd Semester/Operating Systems/: README.md
2nd Year/2nd Semester/Operational investigation/: README.md
2nd Year/2nd Semester/Program Calculation/: README.md
(+1064 files in other folders)
